Add Eclipse proxy support for source downloads
- Add org.eclipse.core.net dependency for proxy service
- Create ProxyUtil helper class for proxy configuration
- Update UrlDownloader to use Eclipse proxy settings
- Update AbstractSourceCodeFinder for proxy support
- Update NexusSourceCodeFinder for proxy support
- Update ArtifactorySourceCodeFinder for proxy support
- Update SonatypeSourceCodeFinder for proxy support
- Add basic ProxyUtil tests
- Maintains backward compatibility when no proxy is configured

Agent-Logs-Url: https://github.com/nbauma109/ecd/sessions/5415a472-2e86-4422-953d-3d9f5857f1d3

Co-authored-by: nbauma109 <9403560+nbauma109@users.noreply.github.com>