@@ -11,6 +11,8 @@ package io.github.nbauma109.decompiler.source.attach.finder;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.Proxy;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
@@ -25,6 +27,9 @@ import java.util.regex.Pattern;
 
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
+import org.eclipse.core.net.proxy.IProxyService;
+
+import io.github.nbauma109.decompiler.source.attach.utils.ProxyUtil;
 import io.github.nbauma109.decompiler.source.attach.utils.SourceAttachUtil;
 import io.github.nbauma109.decompiler.source.attach.utils.SourceBindingUtil;
 import io.github.nbauma109.decompiler.source.attach.utils.UrlDownloader;
@@ -146,7 +151,24 @@ public class ArtifactorySourceCodeFinder extends AbstractSourceCodeFinder implem
         String apiUrl = getArtifactApiUrl();
         String url = buildSearchUrl(apiUrl, g, a, v, c, sha1);
 
-        URLConnection connection = new URL(url).openConnection();
+        // Get Eclipse proxy service
+        IProxyService proxyService = getProxyService();
+
+        // Open connection with proxy support
+        URLConnection connection;
+        if (proxyService != null) {
+            try {
+                URI uri = new URI(url);
+                Proxy proxy = ProxyUtil.getProxy(uri, proxyService);
+                connection = new URL(url).openConnection(proxy);
+            } catch (Exception e) {
+                Logger.debug("Failed to use proxy, falling back to direct connection: " + e.getMessage());
+                connection = new URL(url).openConnection();
+            }
+        } else {
+            connection = new URL(url).openConnection();
+        }
+
         connection.setConnectTimeout(5000);
         connection.setReadTimeout(5000);
         connection.connect();
